// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = false 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField1"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection  readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField1"
        onChange={[Function]}
        readOnly={true}
        type="text"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
    </div>
    <div
      className="copySection"
    >
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.copy.ariaLabel"
        iconProps={
          Object {
            "iconName": "copy",
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.copy.label"
      />
    </div>
  </div>
</div>
`;

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = true 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField2"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection  readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField2"
        onChange={[Function]}
        readOnly={true}
        type="password"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.toggleMask.ariaLabel"
        iconProps={
          Object {
            "iconName": "RedEye",
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.toggleMask.label"
      />
    </div>
    <div
      className="copySection"
    >
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.copy.ariaLabel"
        iconProps={
          Object {
            "iconName": "copy",
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.copy.label"
      />
    </div>
  </div>
</div>
`;

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = true 2`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField3"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection  readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField3"
        onChange={[Function]}
        readOnly={true}
        type="password"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.toggleMask.ariaLabel"
        iconProps={
          Object {
            "iconName": "RedEye",
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.toggleMask.label"
      />
    </div>
    <div
      className="copySection"
    >
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.copy.ariaLabel"
        iconProps={
          Object {
            "iconName": "copy",
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.copy.label"
      />
    </div>
  </div>
</div>
`;

exports[`MaskedCopyableTextField snapshots it matches snapshot when error message specified 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField4"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection error readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField4"
        onChange={[Function]}
        readOnly={true}
        type="password"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.toggleMask.ariaLabel"
        iconProps={
          Object {
            "iconName": "RedEye",
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.toggleMask.label"
      />
    </div>
    <div
      className="copySection"
    >
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.copy.ariaLabel"
        iconProps={
          Object {
            "iconName": "copy",
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.copy.label"
      />
    </div>
  </div>
  <div
    className="errorSection"
  >
    error
  </div>
</div>
`;
